--- a/Group Project 106.2/UserControl1.xaml
+++ b/Group Project 106.2/UserControl1.xaml
@@ -11,11 +11,11 @@
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black"/>
-                    <GradientStop Color="Red" Offset="1"/>
+                    <GradientStop Color="#FFFF0098" Offset="1"/>
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Button Content="Button" HorizontalAlignment="Left" Height="77" Margin="74,164,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Center" Height="77" Margin="0,113,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click"/>
 
     </Grid>
 </UserControl>
