--- a/Group Project 106.2/Loginpage.xaml
+++ b/Group Project 106.2/Loginpage.xaml
@@ -71,7 +71,7 @@
             </TextBox>
 
         </StackPanel>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="342,380,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Back" HorizontalAlignment="Center" Margin="0,400,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
 </UserControl>
