--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -8,9 +8,9 @@
         Title="MainWindow" Height="800" Width="400">
     <Grid Height="800">
 
-        <Button Click="Home_Button_Click" VerticalAlignment="Top" Margin="0,0,150,0" Height="17"  Width="120">Home</Button>
-        <Button Click="Account_Button_Click" VerticalAlignment="Top" Margin="150,0,0,0" Height="18"  Width="128">Account</Button>
-        <ContentControl Name="MainContent" Height="750" Margin="0,34,0,16" />
+        <Button Click="Home_Button_Click" VerticalAlignment="Top" Margin="0,100,150,0" Height="17"  Width="120">Home</Button>
+        <Button Click="Account_Button_Click" VerticalAlignment="Top" Margin="150,100,0,0" Height="18"  Width="128">Account</Button>
+        <ContentControl Name="MainContent" Height="800" />
 
     </Grid>
 
