--- a/Group Project 106.2/Appointment.xaml
+++ b/Group Project 106.2/Appointment.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="932" d:DesignWidth="430" Background="#FFFFFF">
     
     <Grid>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click_back"/>
         <Image Source="AP.png" Margin="59,134,59,512" Height="286" Width="312"/>
         
         <StackPanel HorizontalAlignment="Left" 
