--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -8,8 +8,15 @@
         Title="MainWindow" Height="800" Width="400">
     <Grid Height="800">
 
-        <Button Click="Home_Button_Click" VerticalAlignment="Top" Margin="0,100,150,0" Height="17"  Width="120">Home</Button>
-        <Button Click="Account_Button_Click" VerticalAlignment="Top" Margin="150,100,0,0" Height="18"  Width="128">Account</Button>
+        <Button Click="Button_Click_1" VerticalAlignment="Top" Margin="0,100,150,0" Height="20"  Width="120">Page 1</Button>
+        <Button Click="Button_Click_2" VerticalAlignment="Top" Margin="150,100,0,0" Height="20"  Width="120">Page 2</Button>
+
+        <Button Click="Button_Click_3" VerticalAlignment="Top" Margin="0,150,150,0" Height="20" Width="120">Page 3</Button>
+        <Button Click="Button_Click_4" VerticalAlignment="Top" Margin="150,150,0,0" Height="20" Width="120">Page 4</Button>
+
+
+
+
         <ContentControl Name="MainContent" Height="800" />
 
     </Grid>
