--- a/Group Project 106.2/Loginpage.xaml
+++ b/Group Project 106.2/Loginpage.xaml
@@ -8,9 +8,9 @@
              d:DesignHeight="800" d:DesignWidth="400" Background="#F1F3F5">
     <Grid>
 
-        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click" Height="49" Width="53"/>
 
-        <Image Source="covid19.png"
+        <Image Source="images/covid19.png"
                    Height="190"
                    Width="266"
                     HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,87,0,0"/>
@@ -38,7 +38,7 @@
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" 
                        VerticalAlignment="Top"
-                       Margin="53,466,0,0">
+                       Margin="53,400,0,0">
             <TextBlock Foreground="#181818"
                        FontSize="14"
                        TextAlignment="Left" 
@@ -50,7 +50,7 @@
 
         <StackPanel HorizontalAlignment="Left" 
                        VerticalAlignment="Top"
-                       Margin="47,546,0,0">
+                       Margin="53,470,0,0">
             <TextBlock Foreground="#181818"
                        FontSize="14"
                        TextAlignment= "Left" 
@@ -81,14 +81,11 @@
 
             </Grid>
 
-            <Button Width="313.97" Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin=" 0,0,0,0" Content="Log IN"/>
-            <Button Width="320" Height="42" Background="White" Foreground="#000000" FontSize="14" Margin=" 0,20,0,0" Content="Sign in With Google"/>
-            <Image Source="g.png" Height="29" Width="28" RenderTransformOrigin="-2.439,-0.606"/>
-
-
         </StackPanel>
 
-
+        <Button Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin="47,628,33,131" Content="Log IN"/>
+        <Button Width="320" Height="42" Background="White" Foreground="#000000" FontSize="14" Margin="47,674,33,84" Content="Sign in With Google"/>
+        <Image Source="images/g.png" Height="30" Width="30" Margin="67,680,283,90" RenderTransformOrigin="1.367,0.422"/>
 
 
 
