--- a/Group Project 106.2/Appointment.xaml
+++ b/Group Project 106.2/Appointment.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="800" d:DesignWidth="400" Background="#FFFFFF">
     
     <Grid>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click_back" Height="52" Width="56"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="BackBtn" Height="52" Width="56"/>
         <Image Source="images/AP.png" Margin="59,134,59,512" Height="286" Width="312"/>
         
         <StackPanel HorizontalAlignment="Left" 
@@ -55,6 +55,6 @@
             <TextBox Height="41" Width="314" Foreground="#636364" Text="Enter your Gender" />
 
         </StackPanel>
-        <Button Click="Button_booked" Width="313.97" Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin=" 0,595,0,0" Content="Book a Appointment"/>
+        <Button Click="BookedBtn" Width="313.97" Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin=" 0,595,0,0" Content="Book a Appointment"/>
     </Grid>
 </UserControl>
