--- a/Group Project 106.2/Loginpage.xaml
+++ b/Group Project 106.2/Loginpage.xaml
@@ -44,7 +44,7 @@
                        TextAlignment="Left" 
                        FontFamily="Poppins" ><Run Text="Email"
                                                  /></TextBlock>
-            <TextBox Height="41" Width="314" Foreground="#636364" Text="Enter your email" />
+            <TextBox Height="41" Width="314" Foreground="#636364" Name="username"  />
 
         </StackPanel>
 
@@ -64,14 +64,16 @@
                     </TransformGroup>
                 </TextBlock.RenderTransform><Run Text=  "Password"
                                                  /></TextBlock>
-            <TextBox Height="41.31" Width="313.97"  />
+            <TextBox Height="41.31" Width="313.97" Name="password" />
 
             <Grid>
 
                 <TextBlock Foreground="#181818"
                        FontSize="12"
                        TextAlignment="Left" VerticalAlignment="Top"
-                       FontFamily="Poppins" Margin="0,0,0,0" Text="Remember Me"/>
+                       FontFamily="Poppins" Margin="0,0,0,0" Text="Remember Me"
+                       
+                           />
 
                 <TextBlock Foreground="#181818"
                        FontSize="12"
@@ -83,9 +85,10 @@
 
         </StackPanel>
 
-        <Button Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin="47,628,33,131" Content="Log IN"/>
+        <Button Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin="47,628,33,131" Content="Log IN" Click="SubmitBtn"/>
         <Button Width="320" Height="42" Background="White" Foreground="#000000" FontSize="14" Margin="47,674,33,84" Content="Sign in With Google"/>
         <Image Source="images/g.png" Height="30" Width="30" Margin="67,680,283,90" RenderTransformOrigin="1.367,0.422"/>
+        <TextBlock Name="loginStatusText" HorizontalAlignment="Left" Margin="53,565,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="314"/>
 
 
 
