--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:Group_Project_106._2"
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="400">
-    <Grid Height="800">
+    <Grid>
+
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN"/>
 
         <Button Click="Page1Btn" VerticalAlignment="Top" Margin="0,100,150,0" Height="20"  Width="120">Page 1</Button>
         <Button Click="Page2Btn" VerticalAlignment="Top" Margin="150,100,0,0" Height="20"  Width="120">Page 2</Button>
@@ -16,7 +18,7 @@
 
         <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="163"/>
 
-            <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
+        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
 
 
         <ContentControl Name="MainContent" Height="800" >
