--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -9,6 +9,9 @@
     <Grid>
 
         <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN"/>
+        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="163"/>
+
+        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
 
         <Button Click="Page1Btn" VerticalAlignment="Top" Margin="0,100,150,0" Height="20"  Width="120">Page 1</Button>
         <Button Click="Page2Btn" VerticalAlignment="Top" Margin="150,100,0,0" Height="20"  Width="120">Page 2</Button>
@@ -16,13 +19,10 @@
         <Button Click="Page3Btn" VerticalAlignment="Top" Margin="0,150,150,0" Height="20" Width="120">Page 3</Button>
         <Button Click="Page4Btn" VerticalAlignment="Top" Margin="150,150,0,0" Height="20" Width="120">Page 4</Button>
 
-        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="163"/>
-
-        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
+        <Button Click="Page5Btn" VerticalAlignment="Top" Margin="0,200,150,0" Height="20" Width="120">Page 5</Button>
 
 
-        <ContentControl Name="MainContent" Height="800" >
-        </ContentControl>
+        <ContentControl Name="MainContent" Height="800" ></ContentControl>
 
     </Grid>
 
