--- a/Group Project 106.2/Symptoms.xaml
+++ b/Group Project 106.2/Symptoms.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Group_Project_106._2"
              mc:Ignorable="d" 
-             d:DesignHeight="1465" d:DesignWidth="428" Background="#FFFFFF">
+             d:DesignHeight="800" d:DesignWidth="400" Background="#FFFFFF">
     <Grid>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="BackBtn"/>
 
 
         <StackPanel RenderTransformOrigin="0.5,0.5" Margin="19,0,0,120">
