--- a/Group Project 106.2/Loginpage.xaml
+++ b/Group Project 106.2/Loginpage.xaml
@@ -8,6 +8,7 @@
              d:DesignHeight="800" d:DesignWidth="400" Background="#F1F3F5">
     <Grid>
 
+
         <Button Content="Back" HorizontalAlignment="Left" Margin="19,33,0,0" VerticalAlignment="Top" Click="BackBtn" Height="49" Width="53"/>
 
         <Image Source="images/covid19.png"
@@ -66,31 +67,38 @@
                                                  /></TextBlock>
             <TextBox Height="41.31" Width="313.97" Name="password" />
 
-            <Grid>
+            <!--<Grid>-->
 
-                <TextBlock Foreground="#181818"
+            <TextBlock Foreground="#181818"
                        FontSize="12"
                        TextAlignment="Left" VerticalAlignment="Top"
                        FontFamily="Poppins" Margin="0,0,0,0" Text="Remember Me"
                        
                            />
 
-                <TextBlock Foreground="#181818"
+            <TextBlock Foreground="#181818"
                        FontSize="12"
                        TextAlignment="Right"
                        FontFamily="Poppins" Margin="0,0,0,0" Text="Forgot Password"/>
 
 
-            </Grid>
+            <!--</Grid>-->
+
+        </StackPanel>
+        <TextBlock Name="loginStatusText" HorizontalAlignment="Left" Margin="53,565,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="314"/>
+        <StackPanel>
+            <Button Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin="47,628,33,131" Content="Log IN" Click="SubmitBtn"/>
+        </StackPanel>
+        <StackPanel>
+
+            <Button Width="320" Height="42" Background="White" Foreground="#000000" FontSize="14" Margin="47,674,33,84" Content="Sign in With Google"/>
 
         </StackPanel>
 
-        <Button Height="41.31" Background="#EA454C" Foreground="#FFFFFF" FontSize="14" Margin="47,628,33,131" Content="Log IN" Click="SubmitBtn"/>
-        <Button Width="320" Height="42" Background="White" Foreground="#000000" FontSize="14" Margin="47,674,33,84" Content="Sign in With Google"/>
-        <Image Source="images/g.png" Height="30" Width="30" Margin="67,680,283,90" RenderTransformOrigin="1.367,0.422"/>
-        <TextBlock Name="loginStatusText" HorizontalAlignment="Left" Margin="53,565,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="314"/>
+            <Image Source="images/g.png" Height="30" Width="30" Margin="67,680,283,90" RenderTransformOrigin="1.367,0.422"/>
 
 
+    
 
     </Grid>
 </UserControl>
