--- a/Group Project 106.2/MainWindow.xaml
+++ b/Group Project 106.2/MainWindow.xaml
@@ -7,26 +7,25 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="800" Width="400">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="328*"/>
-            <RowDefinition Height="441*"/>
-        </Grid.RowDefinitions>
 
-        <TextBlock HorizontalAlignment="Center" Margin="78,10,78,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN"/>
-        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="114,35,114,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="164"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Debug Screen" VerticalAlignment="Top" Width="236" TextAlignment="Center" FontSize="16" FontWeight="Bold" FontFamily="AniMe Matrix - MB_EN" Height="19"/>
+        <TextBlock Name="userState" HorizontalAlignment="Center" Margin="0,35,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="164" Height="16"/>
 
-        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="122,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62"/>
+        <Button Content="Logout" Name="logoutBtn" HorizontalAlignment="Left" Margin="118,56,0,0" VerticalAlignment="Top" Click="LogoutBtn" Width="62" Height="20"/>
 
-        <Button Click="Page1Btn" VerticalAlignment="Top" Margin="61,100,211,0" Height="20"  Width="120">Page 1</Button>
-        <Button Click="Page2Btn" VerticalAlignment="Top" Margin="211,100,61,0" Height="20"  Width="120">Page 2</Button>
-
-        <Button Click="Page3Btn" VerticalAlignment="Top" Margin="61,150,211,0" Height="20" Width="120">Page 3</Button>
-        <Button Click="Page4Btn" VerticalAlignment="Top" Margin="211,150,61,0" Height="20" Width="120">Page 4</Button>
-
-        <Button Click="Page5Btn" VerticalAlignment="Top" Margin="61,200,211,0" Height="20" Width="120">Page 5</Button>
+        <Button Click="HomeBtn" VerticalAlignment="Top" Margin="215,201,65,0" Height="20">Home</Button>
 
 
-        <ContentControl Name="MainContent" Height="800" Margin="0,0,0,-31" Grid.RowSpan="2" ></ContentControl>
+        <Button Click="Page1Btn" VerticalAlignment="Top" Margin="65,100,215,0" Height="20">Page 1</Button>
+        <Button Click="Page2Btn" VerticalAlignment="Top" Margin="215,100,65,0" Height="20">Page 2</Button>
+
+        <Button Click="Page3Btn" VerticalAlignment="Top" Margin="65,150,215,0" Height="20">Page 3</Button>
+        <Button Click="Page4Btn" VerticalAlignment="Top" Margin="215,150,65,0" Height="20">Page 4</Button>
+
+        <Button Click="Page5Btn" VerticalAlignment="Top" Margin="65,201,215,0" Height="20">Page 5</Button>
+
+        <ContentControl Name="MainContent" />
+
 
     </Grid>
 
